[FEAT] user scopes
